@@ -291,6 +291,10 @@ libspectrum_sna_write( libspectrum_byte **buffer, size_t *length,
      etc which are not stored in .sna format */
   *out_flags = LIBSPECTRUM_FLAG_SNAPSHOT_MINOR_INFO_LOSS;
 
+  /* We don't save the ZXCF at all */
+  if( libspectrum_snap_zxcf_active( snap ) )
+    *out_flags |= LIBSPECTRUM_FLAG_SNAPSHOT_MAJOR_INFO_LOSS;
+
   ptr = *buffer;
 
   error = write_header( buffer, &ptr, length, &sp, snap );
